src/css/section-front.less
@z-index-title: 100;
@z-index-bottom-title: 100;
@z-index-hand: 50;
@z-index-base: 40;
@z-index-title-bg: 30;

.section-front {
  background: #f9f7ef;
  height: 100vh;
  position: relative;
  overflow: hidden;

  img {
    display: block;
  }
}

.section-front-title {
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: @z-index-title;
}

.section-front-title-bg {
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: @z-index-title-bg;

  img {
    width: 100%;
    height: auto;
  }
}

#letter-1 {
  animation: 1s steps(2, end) 0s infinite moving-letter-1;
}
#letter-2 {
  animation: 1s steps(2, end) 0s infinite moving-letter-2;
}
#letter-3 {
  animation: 1s steps(2, end) 0s infinite moving-letter-3;
}
#letter-4 {
  animation: 1s steps(2, end) 0s infinite moving-letter-4;
}
#letter-5 {
  animation: 1s steps(2, end) 0s infinite moving-letter-5;
}
#letter-6 {
  animation: 1s steps(2, end) 0s infinite moving-letter-6;
}
#letter-7 {
  animation: 1s steps(2, end) 0s infinite moving-letter-7;
}
#letter-8 {
  animation: 1s steps(2, end) 0s infinite moving-letter-8;
}
#letter-9 {
  animation: 1s steps(2, end) 0s infinite moving-letter-9;
}

@keyframes moving-letter-1 {
  to {
    transform: scale(1.05, 1.02);
    transform-origin: center;
    transform-box: fill-box;
  }
}

@keyframes moving-letter-2 {
  to {
    transform: rotate(5deg) scale(1.05, 1.02);
    transform-origin: center;
    transform-box: fill-box;
  }
}

@keyframes moving-letter-3 {
  to {
    transform: rotate(-4deg);
    transform-origin: center;
    transform-box: fill-box;
  }
}

@keyframes moving-letter-4 {
  to {
    transform: rotate(-15deg);
    transform-origin: center;
    transform-box: fill-box;
  }
}

@keyframes moving-letter-5 {
  to {
    transform: rotate(-13deg) scale(1.08, 1.02);
    transform-origin: center;
    transform-box: fill-box;
  }
}

@keyframes moving-letter-6 {
  to {
    transform: rotate(-10deg);
    transform-origin: center;
    transform-box: fill-box;
  }
}

@keyframes moving-letter-7 {
  to {
    transform: rotate(10deg) scale(1.08, 1.02);
    transform-origin: center;
    transform-box: fill-box;
  }
}

@keyframes moving-letter-8 {
  to {
    transform: rotate(-10deg);
    transform-origin: center;
    transform-box: fill-box;
  }
}

@keyframes moving-letter-9 {
  to {
    transform: rotate(-5deg) scale(1.08, 1.02);
    transform-origin: center;
    transform-box: fill-box;
  }
}

.section-front--base {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 20;
  width: 100vw;
  z-index: @z-index-hand;

  .img-base {
    width: 100%;
    height: auto;
  }

  .hand {
    position: absolute;
    display: block;
    width: 35%;
    animation: 2s steps(4, end) 0s infinite null;
    z-index: @z-index-hand;

    img {
      width: 100%;
    }
  }
  .hand-top-left {
    top: 10px;
    left: 0;
    animation-name: moving-hand-top-left;
  }

  .hand-top-right {
    top: 0;
    right: 0;
    animation-name: moving-hand-top-right;
  }

  .hand-bottom-left {
    bottom: 0;
    left: 0;
    animation-name: moving-hand-bottom-left;
  }

  .hand-bottom-right {
    bottom: 0;
    right: 0;
    animation-name: moving-hand-bottom-right;
  }
}

@keyframes moving-hand-top-left {
  0% {
    transform: translate(-10px, -10px) rotate(10deg);
  }

  to {
    transform: translate(30px, 30px) rotate(40deg);
    transform-origin: center;
    /*transform-box: fill-box;*/
  }
}

@keyframes moving-hand-bottom-left {
  0% {
    transform: translate(-20px, 100px);
  }

  to {
    transform: translate(20px, 20px) rotate(20deg);
    transform-origin: center;
  }
}

@keyframes moving-hand-top-right {
  0% {
    transform: translate(0px, -80px);
  }

  to {
    transform: translate(-60px, 10px) rotate(-20deg);
  }
}

@keyframes moving-hand-bottom-right {
  0% {
    transform: translate(0px, 80px);
  }

  to {
    transform: translate(-40px, 0) rotate(-20deg);
  }
}

.section-front--bottom {
  position: absolute;
  bottom: @spacing;
  right: @spacing;
  z-index: @z-index-bottom-title;

  h1 {
    display: grid;
    grid-template-columns: auto auto;
    margin: 0;

    .words {
      position: relative;
      text-align: center;
    }

    .vote-number {
      display: block;
      width: 70px;
      margin-bottom: 5px;
      position: absolute;
      top: 0;
      left: 50%;
      transform: translate(-50%, -100%);

      svg {
        display: block;
      }

      #vote-number-circle {
        animation: 1s steps(2, jump-none) 0s infinite flashing-number;
      }
    }

    .date-upright {
      color: @c-grey;
      margin-right: 8px;
      display: block;

      height: 100%;
      width: auto;
    }
  }
}

.section-front--platform-link {
  position: absolute;
  top: @spacing * 0.5;
  right: @spacing * 0.5;
  font-size: 12px;

  color: black;
  text-decoration: none;
  font-weight: bold;
}

@keyframes flashing-number {
  0% {
    fill: black;
  }
  to {
    fill: @c-yellow;
  }
}

@media (orientation: landscape) {
  .section-front {
    padding: @spacing;

    .section-front-title,
    .section-front-title-bg {
      top: @spacing;
      left: 50%;
      transform: translate(-50%, 0);
      width: 65vw;
    }

    .section-front--base {
      position: absolute;
      top: 50%;
      left: initial;
      right: @spacing;
      transform: translate(0, -40%);
      width: 60vw;

      .hand-top-left {
        display: none;
      }
    }

    .section-front--bottom {
      position: absolute;
      bottom: 2 * @spacing;
      left: 2 * @spacing;
      right: initial;

      h1 {
        .words {
          text-align: left;
        }

        .vote-number {
          top: 0;
          left: 0;
          transform: translate(0, -100%);
        }
      }
    }
  }
}

@media @wide {
  .section-front--platform-link {
    .h2();
    top: @spacing;
    right: @spacing;
  }
}

